--- a/Changes.org
+++ b/Changes.org
@@ -377,13 +377,13 @@ occurrence of the task, use =--2d= instead.  See [[doc:org-scheduled-delay-days]
 and [[doc:org-agenda-skip-scheduled-delay-if-deadline][org-agenda-skip-scheduled-delay-if-deadline]] for details on how to
 control this globally or per agenda.
 
-**** Use =C-u C-u C-s= will insert a delay cookie for scheduled tasks
+**** Use =C-u C-u C-c C-s= will insert a delay cookie for scheduled tasks
 
 See the previous section for why delay cookies may be useful.
 
-**** Use =C-u C-u C-d= will insert a warning delay for deadline tasks
+**** Use =C-u C-u C-c C-d= will insert a warning delay for deadline tasks
 
-=C-u C-u C-d= now inserts a warning delay to deadlines.
+=C-u C-u C-c C-d= now inserts a warning delay to deadlines.
 *** Calendar, diary and appts
 
 **** New variable [[doc:org-read-date-minibuffer-local-map][org-read-date-minibuffer-local-map]]
