--- a/fr/community.org
+++ b/fr/community.org
@@ -18,7 +18,7 @@ planifier des projets et de publier des documents, le tout en texte brut.</em></
   :ID:       liste
   :END:
 
-#+ATTR_HTML: id="main-image"
+#+ATTR_HTML: :id main-image
 [[file:../img/list.png]]
 
 Inscrivez-vous à la [[https://lists.gnu.org/mailman/listinfo/emacs-orgmode][liste de discussion]] (en).
@@ -52,7 +52,7 @@ Les utilisateurs discutent aussi sur le canal IRC =#org-mode= de [[http://webcha
   :ID:       worg
   :END:
 
-#+ATTR_HTML: id="main-image"
+#+ATTR_HTML: :id main-image
 [[file:../img/worg.png]]
 
 =~$ git clone git://orgmode.org/worg.git=
@@ -82,7 +82,7 @@ publique à Bastien.
   :ID:       gsoc
   :END:
 
-#+ATTR_HTML: id="main-image"
+#+ATTR_HTML: :id main-image
 [[file:../img/gsoc2012.png]]
 
 En 2012, deux étudiants ont fini avec succès un projet [[http://code.google.com/soc/][Google Summer of
@@ -140,7 +140,7 @@ l'oeuvre.
   :ID:       plus
   :END:
 
-#+ATTR_HTML: id="main-image"
+#+ATTR_HTML: :id main-image
 [[file:../img/gplus.png]]
 
 /Takaaki Ishikawa/ maintient [[https://twitter.com/#!/orgmode_bot][@orgmode\_bot]] sur Twitter et vous pouvez
@@ -188,7 +188,7 @@ Si vous voulez retrouvez des co-Orgers, une manière simple est de porter le
 célèbre t-shirt Org.  Vous pouvez l'acheter depuis [[http://orgmode.spreadshirt.de/][l'Europe]] ou les
 [[http://orgmode.spreadshirt.com/][États-Unis]].
 
-#+ATTR_HTML: style="float: center;" width="300px"
+#+ATTR_HTML: :style float:center; :width 300px
 [[file:../img/shirts.jpg]]
 
 ** Move
