--- a/fr/features.org
+++ b/fr/features.org
@@ -18,7 +18,7 @@ planifier des projets et de publier des documents, le tout en texte brut.</em></
   :ID: edition
   :END:
 
-#+ATTR_HTML: id="main-image"
+#+ATTR_HTML: :id main-image
 [[file:../img/structure.jpg]]
 
 Org s'appuie sur =outline.el=.
@@ -46,7 +46,7 @@ Plus sur la [[http://orgmode.org/manual/Document-Structure.html#Document-Structu
   :ID: planification
   :END:
 
-#+ATTR_HTML: id="main-image"
+#+ATTR_HTML: :id main-image
 [[file:../img/planning.jpg]]
 
 Org peut être utilisé comme gestionnaire de listes TODO et de projets.
@@ -78,7 +78,7 @@ Gérer les [[http://orgmode.org/manual/Dates-and-Times.html#Dates-and-Times][dat
   :ID: chronometrage
   :END:
 
-#+ATTR_HTML: id="main-image"
+#+ATTR_HTML: :id main-image
 [[file:../img/clocking.jpg]]
 
 Chronométrer une tâche se fait avec =C-c C-x C-i=.
@@ -110,7 +110,7 @@ Plus sur le [[http://orgmode.org/manual/Clocking-work-time.html#Clocking-work-ti
   :ID: agendas
   :END:
 
-#+ATTR_HTML: id="main-image"
+#+ATTR_HTML: :id main-image
 [[file:../img/agenda.jpg]]
 
 Même avec des fichiers =.org= volumineux et des milliers de tâches, vous
@@ -146,7 +146,7 @@ Tutoriel sur les [[http://orgmode.org/worg/org-tutorials/org-custom-agenda-comma
   :ID: capturer
   :END:
 
-#+ATTR_HTML: id="main-image"
+#+ATTR_HTML: :id main-image
 [[file:../img/capture.jpg]]
 
 Ajouter un item TODO à vos fichiers .org s'appelle /capturer/.
@@ -175,7 +175,7 @@ Plus sur la [[http://orgmode.org/manual/Capture.html#Capture][capture]] (manuel)
   :ID: tableaux
   :END:
 
-#+ATTR_HTML: id="main-image"
+#+ATTR_HTML: :id main-image
 [[file:../img/table2.jpg]]
 
 Org fait des merveilles comme éditeur de tableaux en texte brut.
@@ -211,7 +211,7 @@ Utiliser [[http://orgmode.org/worg/org-tutorials/org-spreadsheet-intro.html][Org
   :ID: exporter
   :END:
 
-#+ATTR_HTML: id="main-image"
+#+ATTR_HTML: :id main-image
 [[file:../img/export.jpg]]
 
 Org est un système de publication de documents.
@@ -250,7 +250,7 @@ Plus sur la [[http://orgmode.org/manual/Publishing.html#Publishing][publication]
   :ID: babel
   :END:
 
-#+ATTR_HTML: id="main-image"
+#+ATTR_HTML: :id main-image
 [[file:../img/babel.jpg]]
 
 Org fait de la programmation littérale ([[http://en.wikipedia.org/wiki/Literate_programming][literate programming]]) un manière
@@ -280,7 +280,7 @@ Liste des [[http://orgmode.org/worg/org-contrib/babel/languages.html][langages s
   :ID: mobile
   :END:
 
-#+ATTR_HTML: style="float: right; box-shadow: none;" width="200px"
+#+ATTR_HTML: :style float:right;box-shadow:none; :width 200px
 [[file:../img/mobile.png]]
 
 /Richard Moreland/ a développé [[http://mobileorg.ncogni.to/][MobileOrg]], un logiciel libre pour iPhone et
