--- a/Changes.org
+++ b/Changes.org
@@ -8,7 +8,7 @@
 #+OPTIONS:   H:3 num:nil toc:t \n:nil @:t ::t |:t ^:t *:t TeX:t author:nil <:t LaTeX:t
 #+KEYWORDS:  Org Org-mode Emacs outline planning note authoring project plain-text LaTeX HTML
 #+DESCRIPTION: Org Org-mode Emacs Changes ChangeLog release notes
-#+STYLE:     <link rel="stylesheet" href="org-changes.css" type="text/css" />
+#+HTML_HEAD:     <link rel="stylesheet" href="org-changes.css" type="text/css" />
 
 #+BEGIN_HTML
 <div id="top"><p><em>Org mode is for keeping notes, maintaining TODO lists, planning
