--- a/changes_older.org
+++ b/changes_older.org
@@ -5,7 +5,7 @@
 #+KEYWORDS:  Org Org-mode Emacs outline planning note authoring project plain-text LaTeX HTML
 #+DESCRIPTION: Org Org-mode Emacs Changes ChangeLog release notes archives
 #+OPTIONS: H:3 num:nil toc:t \n:nil @:t ::t |:t ^:{} *:t TeX:t LaTeX:nil skip:nil
-#+STYLE:     <link rel="stylesheet" href="org-changes.css" type="text/css" />
+#+HTML_HEAD:     <link rel="stylesheet" href="org-changes.css" type="text/css" />
 
 #+BEGIN_HTML
 <div id="top"><p><em>Org mode is for keeping notes, maintaining TODO lists, planning
