--- a/fr/index.org
+++ b/fr/index.org
@@ -7,7 +7,7 @@
 #+DESCRIPTION: Org: an Emacs Mode for Notes, Planning, and Authoring
 #+MACRO: next #+BEGIN_HTML\n<div class="move">\n> <a onclick="goToByScroll('$1');return false;" href="#">documentation</a>\n</div>\n#+END_HTML
 #+MACRO: previous #+BEGIN_HTML\n<div class="move">\n< <a onclick="goToByScroll('$1');return false;" href="#">installation</a>\n</div>\n#+END_HTML
-#+STYLE:     <link rel="stylesheet" href="http://orgmode.org/org.css" type="text/css" />
+#+HTML_HEAD:     <link rel="stylesheet" href="http://orgmode.org/org.css" type="text/css" />
 
 #+BEGIN_HTML
 <div id="top"><p><em>Org mode permet de prendre des notes,
