--- a/fr/index.org
+++ b/fr/index.org
@@ -41,6 +41,7 @@ Dernière version du jour : [[http://orgmode.org/org-latest.tar.gz][tar.gz]] ou 
 - [[#docs][Manuels et tutoriels]]
 - [[http://orgmode.org/worg/org-tools/index.html][Outils pour Org (en dehors d'Emacs)]]
 - [[http://orgmode.org/worg/][Worg: doc communautaire]]
+- [[http://orgmode.org/worg/org-contribute.html][Comment contribuer à Org ?]]
 - [[http://orgmode.org/org.html#History-and-Acknowledgments][Histoire et remerciements]]
 - [[file:talks.org][Présentations vidéo sur Org mode]]
 - [[http://orgmode.org/fr/community.html#gsoc][Google Summer of Code 2012]]
