--- a/index.org
+++ b/index.org
@@ -38,6 +38,7 @@ Daily snapshots: [[http://orgmode.org/org-latest.tar.gz][tar.gz]] or [[http://or
 - [[#docs][Manuals and tutorials]]
 - [[http://orgmode.org/worg/org-tools/index.html][Org tools (outside Emacs)]]
 - [[http://orgmode.org/worg/][Worg: community-written docs]]
+- [[http://orgmode.org/worg/org-contribute.html][How to contribute to Org?]]
 - [[http://orgmode.org/org.html#History-and-Acknowledgments][History and acknowledgements]]
 - [[file:talks.org][Talks about Org mode]]
 - [[http://orgmode.org/community.html#gsoc][Google Summer of Code 2012]]
