Thank Rackspace.com for free hosting
* img/rackspace.jpg: Added

--- a/index.org
+++ b/index.org
@@ -98,3 +98,12 @@ and Rick Moen.
    :END:
 
 {{{previous(intro)}}}
+
+* Thanks
+
+#+ATTR_HTML: :alt Rackspace logo :width 200 :float wrap
+ [[./img/rackspace.jpg]]
+\nbsp{}Thanks to [[http://rackspace.com][Rackspace]] for free hosting of orgmode.org.
+
+
+
