--- a/index.org
+++ b/index.org
@@ -24,7 +24,7 @@ projects, and authoring documents with a fast and effective plain-text system.<b
 #+ATTR_HTML: :id main-image
 [[file:img/main.jpg]]
 
-Stable version *8.2.5e* (Jan. 2014) --- [[http://orgmode.org/org-8.2.5e.tar.gz][tar.gz]] or [[http://orgmode.org/org-8.2.5e.zip][zip]] ([[file:Changes.org][release notes]]).
+Stable version *8.2.5f* (Jan. 2014) --- [[http://orgmode.org/org-8.2.5f.tar.gz][tar.gz]] or [[http://orgmode.org/org-8.2.5f.zip][zip]] ([[file:Changes.org][release notes]]).
 
 Development version ([[http://orgmode.org/cgit.cgi/org-mode.git/][cgit]]):
 
